minikube-ingress/deployment-bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: bar-app
          image: gcr.io/google-samples/hello-app:2.0
          #image: 'junisduck/image_test:junisduck-latest'
          ports:
            - containerPort: 8318

---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    - port: 8080
      targetPort: 8080
