minikube-ingress/deployment-foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo-app
          image: nginx
            #image: 'junisduck/image_test:junisduck-latest'
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    - port: 80
      targetPort: 80
