minikube-ingress/deployment-ooo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ooo-app
  labels:
    app: ooo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ooo
  template:
    metadata:
      labels:
        app: ooo
    spec:
      containers:
        - name: ooo-app
          #image: nginx
          image: 'junisduck/image_test:junisduck-latest'
          ports:
            - containerPort: 8318
---
apiVersion: v1
kind: Service
metadata:
  name: ooo-service
spec:
  selector:
    app: ooo
  ports:
    - port: 8318
      targetPort: 8318
