minikube-ingress/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
      #kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: bar-service
                port:
                  #number: 8318
                  number: 8080
          - path: /foo          
            pathType: Prefix
            backend:
              service:
                name: foo-service
                port:
                  #number: 8318
                  number: 80
          - path: /ooo
            pathType: Prefix
            backend:
              service:
                name: ooo-service
                port:
                  number: 8318
